--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <ul class="item-menu">
                         <li class="items1"><a href="register.html" target="_parent"><button class="btn1">register</button></a></li>
                         <li class="items2"><a href="login.html" target="_parent"><button class="btn2">signin</button></a></li>
-                        <li class="items"><a href="blog.html">blog</a></li>
-                        <li class="items"><a href="#">services</a></li>
+                        <li class="items"><a href="blog.html" class="blog">blog</a></li>
+                        <li class="items"><a href="#" class="blog">services</a></li>
                     </ul>
                 </nav>
             </div>
