--- a/dashbord.html
+++ b/dashbord.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard</title>
     <link href="assets/style/dashboard.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4336f4871b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
                                     <div class="image-container">
                                         <img src="assets/images/desktop.png">
                                     </div>
-                                    <button class="btn1">proceed</button>
+                                    <button class="btn1">proceed </button>
                                 </div>
                                 <div class="text">
                                     <p class="username">add username</p>
@@ -113,13 +114,13 @@
                                 <div class="image-container">
                                     <img src="assets/images/cash.png">
                                 </div>
-                                <button class="btn1">proceed</button>
+                                <button class="btn1">₦ 0</button>
                             </div>
                             <div class="text">
                                 <p class="username">wallet</p>
-                                <p>You can add an ATM card to your account by funding your account with as little as N50</p>
+                                <p class="atm">You can can withdraw from your funding  account as little as N1,000</p>
                                 <!-- <div class="button"> -->
-                                    <button>fund wallet</button>
+                                    <button class="btn2">fund wallet</button>
                                 <!-- </div> -->
                             </div>
                         </div>
@@ -133,33 +134,22 @@
                             </div>
                             <div class="text">
                                 <p class="username">wallet</p>
-                                <p>You can add an ATM card to your account by funding your account with as little as N50</p>
+                                <p class="atm">You can add an ATM card to your account by funding your account with as little as N50</p>
                                 <!-- <div class="button"> -->
-                                    <button>fund wallet</button>
+                                    <button class="btn2">withdraw</button>
                                 <!-- </div> -->
                             </div>
                         </div>
-
                     </div>
-
-
-
                 </div>
-
-
-
-
-
             </div>
-
-
-
-
-
-
         </div>
-
     </div>
+    <footer>
+        <div class="footer">
+            <p>© Copyright xertified xchange . All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
