--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     <input class="myinput" type="text" placeholder="Username" id="username">
                 </div>
                 <div class="btn-container">
-                    <button class="register-btn" type="submit">login</button>
+                    <a href="dashbord.html"><button class="register-btn" type="submit">login</button></a>
                 </div>
             </div>
         </div>
