--- a/dashbord.html
+++ b/dashbord.html
@@ -20,7 +20,7 @@
                 </div>
                 <nav class="nav">
                     <ul class="list-menu">
-                        <li class="list-item"><button class="btn" type="button">log out</button></li>
+                        <li class="list-item"><a href="index.html"><button class="btn" type="button">log out</button></a></li>
                         <li class="list-item"><a href="#">makinde olaitan</a></li>
                         <li class="list-item"><a href="#">my history</a></li>
                         <li class="list-item"><a href="blog.html">blog</a></li>
