--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="content-container">
                 <div class="content">
                     <h1 class="covered">We've Got You Covered!</h1>
-                    <p class="pay">With JassperPay, you can enjoy flexible option for your Data bundle, TV/Cable
-                        Subscriptions, Electricity Bills Payment etc.</p>
+                    <p class="pay">With xertified xchange, you can enjoy flexible option for your btc, swapping
+                        staking, buying and selling.</p>
                     <!-- <div class="rsss"> -->
                     <button class="get-data-btn">
                         <span>get btc</span>
@@ -69,11 +69,8 @@
                         <div class="ads-container">
                             <img class="bundle" src="assets/images/bundle.png">
                         </div>
-                        <h1 class="header2">Data Bundle Purchase</h1>
-                        <p class="paragraph2">Data is oxygen (does that ring a bell? Probably!). With our automated data
-                            purchase process,
-                            you can be assured to resume your online activities almost immediately you run out of data.
-                            Plus, all our data packages come at affordable prices.Get started with us today.</p>
+                        <h1 class="header2">BTC Purchase</h1>
+                        <p class="paragraph2">Bitcoin (BTC) is a digital or virtual currency created in 2009 that uses peer-to-peer technology to facilitate instant payments..</p>
                         <div class="btn-container">
                             <button class="btn">proceed</button>
                         </div>
@@ -92,13 +89,8 @@
                             <img src="assets/images/tv-sub.png">
                         </div>
                         <div class="content-box">
-                            <h1 class="heading4">TV/Cable Subscriptions</h1>
-                            <p class="paragraph4">Your TV/Cable subscription is a whole less hassle with us at Jassper
-                                Enterprise. We help
-                                you
-                                recharge your subscription in just few seconds. What's more? You can even pay for
-                                someone
-                                else. All packages are offered at cheaper prices.</p>
+                            <h1 class="heading4">ETH</h1>
+                            <p class="paragraph4">ETH is a digital or virtual currency created in 2009 that uses peer-to-peer technology to facilitate instant payments.</p>
                         </div>
                         <div class="btn-container">
                             <button class="btn">proceed</button>
@@ -111,12 +103,8 @@
                             <img src="assets/images/electricity.png">
                         </div>
                         <div class="content-box">
-                            <h1 class="heading4">TV/Cable Subscriptions</h1>
-                            <p class="paragraph4">Pay your electricity bills with Jassper Enterprise while saving
-                                your precious time, money
-                                and effort, all from home comfort of your phone. No more long queues — yeah, it's
-                                that
-                                convenient.</p>
+                            <h1 class="heading4">USDT</h1>
+                            <p class="paragraph4">  Tether (USDT) is a cryptocurrency with a value meant to mirror the value of the U.S. dollar. The idea was to create stable digital cash. Tether converts cash into digital currency, to anchor or “tether” the value of the coin to the price of national currencies like the US dollar, the Euro, and the Yen.</p>
                         </div>
                         <div class="btn-container">
                             <button class="btn">proceed</button>
@@ -136,9 +124,10 @@
                             <img src="assets/images/converter.png">
                         </div>
                         <div class="content-box">
-                            <h1 class="heading4">Conversion of Airtime to cash</h1>
-                            <p class="paragraph4">You don't have to push that panic button anymore when you recharge
-                                excess amount from your banks. We offer you a platform to exchange your airtime for cash
+                            <h1 class="heading4">Conversion of crypto</h1>
+                            <p class="paragraph4">exchanging one type of crypto for another. To convert crypto, choose the coin that you wish to convert, and the coin that you wish to convert to. You will then be asked to enter the required amount in units.
+                             you dont have to   panic button anymore when you when the market turns red
+                                excess amount from your banks. We offer you a platform to exchange your crypto for cash
                                 instantly. Available on all major networks.
                             </p>
                         </div>
