--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group">
                     <label class="mylabel1" for="username">Username</label>
-                    <input class="myinput" type="text" placeholder="Username" id="username">
+                    <input class="myinput" type="password" placeholder="Username" id="username">
                 </div>
                 <div class="btn-container">
                     <a href="dashbord.html"><button class="register-btn" type="submit">login</button></a>
