--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
                 </div>
                 <div class="form-group">
-                    <label class="mylabel1" for="username">Username</label>
+                    <label class="mylabel1" for="password">Username</label>
                     <input class="myinput" type="password" placeholder="Username" id="username">
                 </div>
                 <div class="btn-container">
