--- a/index.html
+++ b/index.html
@@ -18,14 +18,31 @@
                     <!-- <img src="assets/images/logo.png"> -->
                     <img src="assets/images/xerty.jpg">
                 </div>
-                <nav class="right-bar">
+                <nav class="right-bar desktop">
                     <ul class="item-menu">
-                        <li class="items1"><a href="register.html" target="_parent"><button class="btn1">register</button></a></li>
-                        <li class="items2"><a href="login.html" target="_parent"><button class="btn2">signin</button></a></li>
+                        <li class="items1"><a href="register.html" target="_parent"><button
+                                    class="btn1">register</button></a></li>
+                        <li class="items2"><a href="login.html" target="_parent"><button
+                                    class="btn2">signin</button></a></li>
                         <li class="items"><a href="blog.html" class="blog">blog</a></li>
                         <li class="items"><a href="#" class="blog">services</a></li>
                     </ul>
                 </nav>
+                <nav class="right-bar mobile">
+                    <span class="hamburger"><i class="fa-solid fa-bars"></i></li></span>
+
+                    <div class="item-menu  hide">
+                        <span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
+                        <ul class="my-items">
+                            <li class="list"><button class="btn-mobile"><a href="">Register</a></button></li>
+                            <li class="list"><button class="btn-mobile"><a href="">log in</a></button></li>
+
+                            </li>
+                        </ul>
+
+                    </div>
+                </nav>
+
             </div>
         </div>
     </header>
@@ -39,8 +56,8 @@
                     <!-- <div class="rsss"> -->
                     <button class="get-data-btn">
                         <span>get btc</span>
-                       <span class="rss"> <i class="fa-solid fa-rss"></i></span>
-                       
+                        <span class="rss"> <i class="fa-solid fa-rss"></i></span>
+
 
                     </button>
 
@@ -70,7 +87,8 @@
                             <img class="bundle" src="assets/images/bundle.png">
                         </div>
                         <h1 class="header2">BTC Purchase</h1>
-                        <p class="paragraph2">Bitcoin (BTC) is a digital or virtual currency created in 2009 that uses peer-to-peer technology to facilitate instant payments..</p>
+                        <p class="paragraph2">Bitcoin (BTC) is a digital or virtual currency created in 2009 that uses
+                            peer-to-peer technology to facilitate instant payments..</p>
                         <div class="btn-container">
                             <button class="btn">proceed</button>
                         </div>
@@ -90,7 +108,8 @@
                         </div>
                         <div class="content-box">
                             <h1 class="heading4">ETH</h1>
-                            <p class="paragraph4">ETH is a digital or virtual currency created in 2009 that uses peer-to-peer technology to facilitate instant payments.</p>
+                            <p class="paragraph4">ETH is a digital or virtual currency created in 2009 that uses
+                                peer-to-peer technology to facilitate instant payments.</p>
                         </div>
                         <div class="btn-container">
                             <button class="btn">proceed</button>
@@ -104,7 +123,10 @@
                         </div>
                         <div class="content-box">
                             <h1 class="heading4">USDT</h1>
-                            <p class="paragraph4">  Tether (USDT) is a cryptocurrency with a value meant to mirror the value of the U.S. dollar. The idea was to create stable digital cash. Tether converts cash into digital currency, to anchor or “tether” the value of the coin to the price of national currencies like the US dollar, the Euro, and the Yen.</p>
+                            <p class="paragraph4"> Tether (USDT) is a cryptocurrency with a value meant to mirror the
+                                value of the U.S. dollar. The idea was to create stable digital cash. Tether converts
+                                cash into digital currency, to anchor or “tether” the value of the coin to the price of
+                                national currencies like the US dollar, the Euro, and the Yen.</p>
                         </div>
                         <div class="btn-container">
                             <button class="btn">proceed</button>
@@ -125,8 +147,10 @@
                         </div>
                         <div class="content-box">
                             <h1 class="heading4">Conversion of crypto</h1>
-                            <p class="paragraph4">exchanging one type of crypto for another. To convert crypto, choose the coin that you wish to convert, and the coin that you wish to convert to. You will then be asked to enter the required amount in units.
-                             you dont have to   panic button anymore when you when the market turns red
+                            <p class="paragraph4">exchanging one type of crypto for another. To convert crypto, choose
+                                the coin that you wish to convert, and the coin that you wish to convert to. You will
+                                then be asked to enter the required amount in units.
+                                you dont have to panic button anymore when you when the market turns red
                                 excess amount from your banks. We offer you a platform to exchange your crypto for cash
                                 instantly. Available on all major networks.
                             </p>
