--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
             <div class="logo-nav">
                 <div class="logo">
                     <!-- <img src="assets/images/logo.png"> -->
-                    <img src="assets/images/xerty.jpg">
+                    <!-- <img src="assets/images/xerty.jpg"> -->
+                    <h1 class="logo-name">Xertified<span class="xchange">Xchange</span></h1>
                 </div>
                 <nav class="right-bar desktop">
                     <ul class="item-menu">
-                        <li class="items1"><a href="register.html" target="_parent"><button
+                        <li class="items1 common"><a href="register.html" target="_parent"><button
                                     class="btn1">register</button></a></li>
-                        <li class="items2"><a href="login.html" target="_parent"><button
+                        <li class="items2 common"><a href="login.html" target="_parent"><button
                                     class="btn2">signin</button></a></li>
-                        <li class="items"><a href="blog.html" class="blog">blog</a></li>
-                        <li class="items"><a href="#" class="blog">services</a></li>
+                        <li class="items common link"><a href="blog.html" class="blog">blog</a></li>
+                        <li class="items common link"><a href="#" class="blog">services</a></li>
                     </ul>
                 </nav>
                 <nav class="right-bar mobile">
@@ -34,8 +35,8 @@
                     <div class="item-menu  hide">
                         <span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
                         <ul class="my-items">
-                            <li class="list"><button class="btn-mobile"><a href="">Register</a></button></li>
-                            <li class="list"><button class="btn-mobile"><a href="">log in</a></button></li>
+                            <li class="list"><button class="btn-mobile one"><a class="anchormobile sign" href="">sign in</a></button></li>
+                            <li class="list"><button class="btn-mobile two"><a class="anchormobile register" href="">register</a></button></li>
 
                             </li>
                         </ul>
@@ -65,7 +66,7 @@
                     <!-- </div> -->
                 </div>
 
-                <div class="img-cont">
+                <div class="img-cont image-mobile">
                     <img class="headerillustration" src="assets/images/headerillustration.png">
                 </div>
             </div>
@@ -187,7 +188,7 @@
         <div class="container">
             <div class="all">
                 <div class="hero">
-                    <div class="img-cont">
+                    <div class="img-cont image-converter">
                         <img src="assets/images/phone-coin.png" class="phone">
                     </div>
                     <div class="hero-side">
@@ -236,7 +237,7 @@
         <div class="container">
             <div class="flex-content">
                 <div class="container">
-                    <div class="prcing">
+                    <div class="pricing">
                         <h1 class="heading30">Data Bundle Pricing</h1>
                     </div>
                     <div class="price-box">
@@ -386,20 +387,20 @@
 
                 <div class="support">
                     <ul class="footer-menu">
-                        <li class="footer-item"><a href="#" class="anchor">useful link</a></li>
+                        <li class="footer-item"><a href="#" class="anchor legal">useful link</a></li>
                         <li class="footer-item"><a href="#" class="anchor">contact</a></li>
                         <li class="footer-item"><a href="#" class="anchor">btc purchase</a></li>
                         <li class="footer-item"><a href="#" class="anchor">reseller</a></li>
                         <li class="footer-item"><a href="#" class="anchor">cable tv</a></li>
                     </ul>
                     <ul class="footer-menu">
-                        <li class="footer-item"><a href="#" class="anchor">support</a></li>
+                        <li class="footer-item"><a href="#" class="anchor legal">support</a></li>
                         <li class="footer-item"><a href="#" class="anchor">certifiedloaded</a></li>
                         <li class="footer-item"><a href="#" class="anchor"></a></li>
                         <li class="footer-item"><a href="#" class="anchor"></a></li>
                     </ul>
                     <ul class="footer-menu">
-                        <li class="footer-item"><a href="#" class="anchor">legal</a></li>
+                        <li class="footer-item"><a href="#" class="anchor legal">legal</a></li>
                         <li class="footer-item"><a href="#" class="anchor">term of use</a></li>
                         <li class="footer-item"><a href="#" class="anchor">privacy</a></li>
                         <li class="footer-item"><a href="#" class="anchor"></a></li>
