--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                             <div class="container-2">
                                 <p class="paragraph1">Make payments using your debit card or using the money in your
                                     wallet</p>
-                                <div class="btn-container">
-                                    <button class="btn4">register now</button>
-                                </div>
+                            </div>
+                            <div class="btn-container mobile-container">
+                                <button class="btn4">register now</button>
                             </div>
                         </div>
                     </div>
