--- a/index.html
+++ b/index.html
@@ -413,17 +413,13 @@
                 <p>© Copyright Xertified Xchange . All Rights Reserved.</p>
             </div>
 
-
-
-
-
         </div>
 
 
 
     </footer>
 
-
+<script src="assets/script/script.js"></script>
 
 </body>
 
