--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
                     </ul>
                 </nav>
                 <nav class="right-bar mobile">
-                    <span class="hamburger"><i class="fa-solid fa-bars"></i></li></span>
-
+                    <span class="toggle-menu"><i class="fa-solid fa-bars"></i></li></span>
+                    
                     <div class="item-menu  hide">
-                        <span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
                         <ul class="my-items">
-                            <li class="list"><button class="btn-mobile one"><a class="anchormobile sign" href="">sign in</a></button></li>
-                            <li class="list"><button class="btn-mobile two"><a class="anchormobile register" href="">register</a></button></li>
+                            <li class="list"><button class="btn-mobile one"><a class="anchormobile sign" href="">sign
+                                        in</a></button></li>
+                            <li class="list"><button class="btn-mobile two"><a class="anchormobile register"
+                                        href="">register</a></button></li>
 
                             </li>
                         </ul>
@@ -419,7 +420,7 @@
 
     </footer>
 
-<script src="assets/script/script.js"></script>
+    <script src="assets/script/script.js"></script>
 
 </body>
 
