--- a/login.html
+++ b/login.html
@@ -17,26 +17,27 @@
             <h3 class="login">Please login</h3>
         </div>
         <div class="container">
-            <div class="formbox">
+            <form class="formbox">
                 <div class="form-group">
                     <label class="mylabel1" for="name">Name</label>
-                    <input class="myinput" type="text" placeholder="Name" id="name">
+                    <input class="myinput name" type="text" placeholder="Name" id="name" value="">
 
                 </div>
                 <div class="form-group">
                     <label class="mylabel1" for="password">Username</label>
-                    <input class="myinput" type="password" placeholder="Username" id="username">
+                    <input class="myinput username" type="text" placeholder="Username" id="username" value="">
                 </div>
                 <div class="btn-container">
-                    <a href="dashbord.html"><button class="register-btn" type="submit">login</button></a>
+                    <button class="register-btn" type="submit">login</button>
                 </div>
-            </div>
+            </form>
         </div>
         <div class="forget-container">
             <p class="pass-word">forget your password? <a href="#" class="reset">reset it</a></p>
             <p class="dont-have-acct">don't have an account? <a href="#" class="reset">sign up</a></p>
         </div>
     </section>
+    <script src="assets/script/dashboard.js"></script>
 </body>
 
 </html>
