--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
             <p class="dont-have-acct">don't have an account? <a href="#" class="reset">sign up</a></p>
         </div>
     </section>
-    <script src="assets/script/dashboard.js"></script>
+    <script src="assets/script/login.js"></script>
 </body>
 
 </html>
