--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <section id="mysection">
         <h1 class="welcomemsg">Welcome to xertified</h1>
         <div class="container">
-            <div class="formbox">
+            <form class="formbox">
                 <div class="form-group">
                     <label class="mylabel1" for="name">Name</label>
                     <input class="myinput" type="text" placeholder="Name">
@@ -21,39 +21,37 @@
                 </div>
                 <div class="form-group">
                     <label class="mylabel1" for="name">Username</label>
-                    <input class="myinput"  type="text" placeholder="Username">
+                    <input class="myinput" type="text" placeholder="Username">
 
                 </div>
                 <div class="form-group">
-                    <label class="mylabel1" for="email">name</label>
-                    <input class="myinput"  type="email" placeholder=e.g'example@email.com'>
+                    <label class="mylabel1" for="email">email</label>
+                    <input class="myinput" type="email" placeholder=e.g'example@email.com'>
 
                 </div>
                 <div class="form-group">
                     <label class="mylabel1" for="number">phone number</label>
-                    <input class="myinput"  type="tel" placeholder=e.g'08168043011'>
+                    <input class="myinput" type="tel" placeholder=e.g'08168043011'>
 
                 </div>
 
                 <div class="form-group">
                     <label class="mylabel1" for="your-password">password</label>
-                    <input class="myinput"  type="password" placeholder="Your Password">
+                    <input class="myinput" type="password" placeholder="Your Password">
 
                 </div>
                 <div class="form-group">
                     <label class="mylabel1" for="confirm-password">confirm password</label>
-                    <input class="myinput"  type="password" placeholder="Name">
+                    <input class="myinput" type="password" placeholder="Name">
                 </div>
                 <div class="btn-container">
                     <button class="register-btn" type="submit">register</button>
                 </div>
 
-
-
-            </div>
+            </form>
         </div>
     </section>
-
+    <script src="assets/script/register.js"></script>
 </body>
 
 </html>
